--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "gguney/barista",
     "type": "library",
-    "description": "Improved Form Builder for Laravel. Highly suggested to use with model-courier package.",
-    "keywords": ["Automatic Form Builder" ],
+    "description": "Improved HTML Builder for Laravel. Highly suggested to use with 'gguney/hammal' package.",
+    "keywords": ["Automatic HTML Builder" ],
     "homepage": "https://github.com/gokhanguneygg/barista",
     "license": "MIT",
     "minimum-stability": "dev",
